// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component: Layout - LeftMenu renders activeItem "/" correctly 1`] = `
<div
  className="MuiPaper-root HookGlobalStyles-leftMenuContainer-1 MuiPaper-elevation1 MuiPaper-rounded"
  style={
    Object {
      "width": 256,
    }
  }
>
  <ul
    className="MuiList-root HookGlobalStyles-menu-3 MuiList-padding"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-4 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <div
          className="MuiBox-root MuiBox-root-16"
        >
          <svg
            data-file-name="SvgLogo_expended"
            fill="#3f51b5"
          />
        </div>
      </div>
      <span
        className="MuiTouchRipple-root"
      />
    </div>
    <div
      className="MuiBox-root MuiBox-root-17"
    >
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-4 MuiListItem-gutters MuiListItem-button Mui-selected"
        href="/"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "background": undefined,
          }
        }
        tabIndex={0}
      >
        <div
          className="MuiListItemIcon-root"
        >
          <svg
            data-file-name="SvgIcon_overview"
            fill="#3f51b5"
            height={24}
            width={24}
          />
        </div>
        <div
          className="MuiListItemText-root"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorPrimary MuiTypography-displayBlock"
          >
            common:portfolio
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </a>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-4 MuiListItem-gutters MuiListItem-button"
        href="/wallets"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "background": "inherits",
          }
        }
        tabIndex={0}
      >
        <div
          className="MuiListItemIcon-root"
        >
          <svg
            data-file-name="SvgIcon_wallet_manage"
            fill="#e0e0e0"
            height={24}
            width={24}
          />
        </div>
        <div
          className="MuiListItemText-root"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            common:wallet
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </a>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-4 MuiListItem-gutters MuiListItem-button"
        href="/delegate"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "background": "inherits",
          }
        }
        tabIndex={0}
      >
        <div
          className="MuiListItemIcon-root"
        >
          <svg
            data-file-name="SvgIcon_delegate_08"
            fill="#e0e0e0"
            height={24}
            width={24}
          />
        </div>
        <div
          className="MuiListItemText-root"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            common:delegate
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </a>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-4 MuiListItem-gutters MuiListItem-button"
        href="/address-book"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "background": "inherits",
          }
        }
        tabIndex={0}
      >
        <div
          className="MuiListItemIcon-root"
        >
          <svg
            data-file-name="SvgIcon_address_book"
            fill="#e0e0e0"
            height={24}
            width={24}
          />
        </div>
        <div
          className="MuiListItemText-root"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            common:address book
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </a>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-4 MuiListItem-gutters MuiListItem-button"
        href="/proposals"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "background": "inherits",
          }
        }
        tabIndex={0}
      >
        <div
          className="MuiListItemIcon-root"
        >
          <svg
            data-file-name="SvgIcon_proposal"
            fill="#e0e0e0"
            height={24}
            width={24}
          />
        </div>
        <div
          className="MuiListItemText-root"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            common:proposals
          </span>
        </div>
        <span
          className="MuiTouchRipple-root"
        />
      </a>
    </div>
    <div
      className="MuiBox-root MuiBox-root-18 HookGlobalStyles-favMenu-5"
    >
      <div
        className="MuiListItemText-root HookGlobalStyles-starredAccounts-6"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:starredAccounts
        </span>
      </div>
      <div
        className="MuiListItemText-root HookGlobalStyles-manageAccounts-7"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:manageAccounts
        </span>
      </div>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiButton-root MuiButton-contained HookGlobalStyles-starButton-8 MuiButton-containedPrimary"
        href="/wallets"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "display": "block",
          }
        }
        tabIndex={0}
      >
        <span
          className="MuiButton-label"
        >
          common:star now
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </a>
    </div>
  </ul>
</div>
`;

exports[`component: Layout - LeftMenu renders no matching activeItem correctly 1`] = `
<div
  className="MuiPaper-root HookGlobalStyles-leftMenuContainer-1 MuiPaper-elevation1 MuiPaper-rounded"
  style={
    Object {
      "width": 256,
    }
  }
>
  <ul
    className="MuiList-root HookGlobalStyles-menu-3 MuiList-padding"
  >
    <div
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-4 MuiListItem-gutters MuiListItem-button"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="button"
      tabIndex={0}
    >
      <div
        className="MuiListItemIcon-root"
      >
        <div
          className="MuiBox-root MuiBox-root-13"
        >
          <svg
            data-file-name="SvgLogo_expended"
            fill="#3f51b5"
          />
        </div>
      </div>
    </div>
    <div
      className="MuiBox-root MuiBox-root-14"
    >
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-4 MuiListItem-gutters MuiListItem-button"
        href="/"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "background": "inherits",
          }
        }
        tabIndex={0}
      >
        <div
          className="MuiListItemIcon-root"
        >
          <svg
            data-file-name="SvgIcon_overview"
            fill="#e0e0e0"
            height={24}
            width={24}
          />
        </div>
        <div
          className="MuiListItemText-root"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            common:portfolio
          </span>
        </div>
      </a>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-4 MuiListItem-gutters MuiListItem-button"
        href="/wallets"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "background": "inherits",
          }
        }
        tabIndex={0}
      >
        <div
          className="MuiListItemIcon-root"
        >
          <svg
            data-file-name="SvgIcon_wallet_manage"
            fill="#e0e0e0"
            height={24}
            width={24}
          />
        </div>
        <div
          className="MuiListItemText-root"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            common:wallet
          </span>
        </div>
      </a>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-4 MuiListItem-gutters MuiListItem-button"
        href="/delegate"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "background": "inherits",
          }
        }
        tabIndex={0}
      >
        <div
          className="MuiListItemIcon-root"
        >
          <svg
            data-file-name="SvgIcon_delegate_08"
            fill="#e0e0e0"
            height={24}
            width={24}
          />
        </div>
        <div
          className="MuiListItemText-root"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            common:delegate
          </span>
        </div>
      </a>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-4 MuiListItem-gutters MuiListItem-button"
        href="/address-book"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "background": "inherits",
          }
        }
        tabIndex={0}
      >
        <div
          className="MuiListItemIcon-root"
        >
          <svg
            data-file-name="SvgIcon_address_book"
            fill="#e0e0e0"
            height={24}
            width={24}
          />
        </div>
        <div
          className="MuiListItemText-root"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            common:address book
          </span>
        </div>
      </a>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root HookGlobalStyles-menuItem-4 MuiListItem-gutters MuiListItem-button"
        href="/proposals"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "background": "inherits",
          }
        }
        tabIndex={0}
      >
        <div
          className="MuiListItemIcon-root"
        >
          <svg
            data-file-name="SvgIcon_proposal"
            fill="#e0e0e0"
            height={24}
            width={24}
          />
        </div>
        <div
          className="MuiListItemText-root"
        >
          <span
            className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
          >
            common:proposals
          </span>
        </div>
      </a>
    </div>
    <div
      className="MuiBox-root MuiBox-root-15 HookGlobalStyles-favMenu-5"
    >
      <div
        className="MuiListItemText-root HookGlobalStyles-starredAccounts-6"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:starredAccounts
        </span>
      </div>
      <div
        className="MuiListItemText-root HookGlobalStyles-manageAccounts-7"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <span
          className="MuiTypography-root MuiListItemText-primary MuiTypography-h6 MuiTypography-colorTextSecondary MuiTypography-displayBlock"
        >
          common:manageAccounts
        </span>
      </div>
      <a
        aria-disabled={false}
        className="MuiButtonBase-root MuiButton-root MuiButton-contained HookGlobalStyles-starButton-8 MuiButton-containedPrimary"
        href="/wallets"
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "display": "block",
          }
        }
        tabIndex={0}
      >
        <span
          className="MuiButton-label"
        >
          common:star now
        </span>
      </a>
    </div>
  </ul>
</div>
`;
